--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,13 +1,26 @@
 repos:
   - repo: local
     hooks:
-    - id: lint
-      name: Lint
-      entry: just lint
-      language: system
-      pass_filenames: false
-    - id: format
-      name: Format
-      entry: just format
-      language: system
-      pass_filenames: false
+      - id: lint
+        name: Lint
+        entry: just lint
+        language: system
+        pass_filenames: false
+
+      - id: format
+        name: Format
+        entry: just format
+        language: system
+        pass_filenames: false
+
+      - id: docs
+        name: Docs
+        entry: just check-docs
+        language: system
+        pass_filenames: false
+
+      - id: pip
+        name: Package
+        entry: just check-package
+        language: system
+        pass_filenames: false
