--- a/.github/workflows/update_coc.yml
+++ b/.github/workflows/update_coc.yml
@@ -43,7 +43,7 @@ jobs:
       # Create a pull request to merge the changes into the main branch
       - name: Create Pull Request
         if: steps.check_changes.outputs.changed == 'true'
-        uses: peter-evans/create-pull-request@v8
+        uses: peter-evans/create-pull-request@c0f553fe549906ede9cf27b5156039d195d2ece0
         with:
             token: ${{ secrets.GITHUB_TOKEN }}
             branch: bot-update-coc
