--- a/pyproject.toml
+++ b/pyproject.toml
@@ -87,6 +87,7 @@ warn_unreachable = true
 warn_no_return = true
 mypy_path = "src"
 modules = "django_typer"
+plugins = ["mypy_django_plugin.main"]
 
 # todo doc8 configuration here is not being picked up and doesn't seem to be working
 # as expected - for now pass these parameters manually
@@ -161,28 +162,7 @@ exclude = [
 
 [dependency-groups]
 colorama = [
-    "colorama>=0.4.6",
-]
-dev = [
-    "coverage>=7.6.12",
-    "django-stubs>=5.1.3",
-    "django-stubs-ext>=5.1.3",
-    "graphviz>=0.20.3",
-    "ipdb>=0.13.13",
-    "mypy>=1.15.0",
-    "pexpect>=4.9.0",
-    "pluggy>=1.5.0",
-    "pre-commit>=4.1.0",
-    "pyright>=1.1.396",
-    "pytest>=8.3.5",
-    "pytest-cov>=6.0.0",
-    "pytest-django>=4.10.0",
-    "pytest-env>=1.1.5",
-    "pytest-timeout>=2.3.1",
-    "ruff>=0.15.0",
-    "pywinpty>=3.0.0; sys_platform == 'win32'",
-    "maturin>=1.9.4; sys_platform == 'win32'",
-    "tomlkit>=0.13.2",
+    "colorama>=0.4.6; sys_platform == 'win32'",
 ]
 docs = [
     "doc8>=1.1.2",
@@ -192,11 +172,55 @@ docs = [
     "sphinx-autobuild>=2024.10.3",
     "sphinx-tabs>=3.4.7",
     "sphinxcontrib-django>=2.5",
-    "sphinxcontrib-typer[png]>=0.8.0"
+    "sphinxcontrib-typer[png]>=0.8.0",
+    "pluggy>=1.5.0",
 ]
 profiling = [
     "tuna>=0.5.11",
 ]
 psycopg3 = [
     "psycopg>=3.1.8",
+]
+
+typing = [
+    "pyright>=1.1.390",
+    "mypy>=1.19.1",
+    "django-stubs[compatible-mypy]>=5.1.3",
+    "django-stubs-ext>=5.1.3",
+]
+lint = [
+    "ruff>=0.15.0", 
+    "readme-renderer[md]>=43.0",
+    "doc8>=1.1.2"
+]
+precommit = [
+    "pre-commit>=3.5.0",
+]
+coverage = ["coverage>=7.6.1"]
+test = [
+    { include-group = "coverage" },
+    "playwright>=1.58.0",
+    "pytest>=8.3.4",
+    "pytest-cov>=6.0.0",
+    "pytest-django>=4.10.0",
+    "pytest-env>=1.1.5",
+    "pytest-timeout>=2.3.1",
+    "python-dateutil>=2.9.0.post0",
+    "pywinpty>=3.0.0; sys_platform == 'win32'",
+    "maturin>=1.9.4; sys_platform == 'win32'",
+    "pluggy>=1.5.0",
+    "graphviz>=0.20.3",
+    "pexpect>=4.9.0",
+]
+dev = [
+    { include-group = "typing" },
+    { include-group = "test" },
+    { include-group = "docs" },
+    { include-group = "lint" },
+    { include-group = "precommit" },
+    { include-group = "colorama" },
+    "packaging>=24.2",
+    "tomlkit>=0.13.3",
+    "ipdb>=0.13.13",
+    "ipython>=8.18.1"
 ]
