fix coverage dep and stubs conf, address injection issues in CI workflows

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -85,12 +85,15 @@ jobs:
       uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff
     - name: Install Dependencies
       shell: bash
+      env:
+        PYTHON_PATH: ${{ steps.sp.outputs.python-path }}
+        DJANGO_VERSION: ${{ matrix.django-version }}
       run: |
-        just setup ${{ steps.sp.outputs.python-path }}
-        if [[ "${{ matrix.django-version }}" =~ (a|b|rc) ]]; then
-          just test-lock Django==${{ matrix.django-version }}
+        just setup "$PYTHON_PATH"
+        if [[ "$DJANGO_VERSION" =~ (a|b|rc) ]]; then
+          just test-lock Django==$DJANGO_VERSION
         else
-          just test-lock Django~=${{ matrix.django-version }}.0
+          just test-lock Django~=$DJANGO_VERSION.0
         fi
     - name: Run Unit Tests
       run: |
@@ -165,14 +168,16 @@ jobs:
     - name: Setup Just
       uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff
     - name: Install Dependencies
+      env:
+        PYTHON_PATH: ${{ steps.sp.outputs.python-path }}
+        DJANGO_VERSION: ${{ matrix.django-version }}
       run: |
-        just setup ${{ steps.sp.outputs.python-path }}
-        $version = "${{ matrix.django-version }}"
+        just setup "$PYTHON_PATH"
 
-        if ($version -match "(a|b|rc)") {
-          just test-lock "Django==$version"
+        if ($DJANGO_VERSION -match "(a|b|rc)") {
+          just test-lock "Django==$DJANGO_VERSION"
         } else {
-          just test-lock "Django~=$version.0"
+          just test-lock "Django~=$DJANGO_VERSION.0"
         }
     - name: Run Unit Tests
       run: |
@@ -247,12 +252,15 @@ jobs:
       run: |
         brew install just
     - name: Install Dependencies
+      env:
+        PYTHON_PATH: ${{ steps.sp.outputs.python-path }}
+        DJANGO_VERSION: ${{ matrix.django-version }}
       run: |
-        just setup ${{ steps.sp.outputs.python-path }}
-        if [[ "${{ matrix.django-version }}" =~ (a|b|rc) ]]; then
-          just test-lock Django==${{ matrix.django-version }}
+        just setup "$PYTHON_PATH"
+        if [[ "$DJANGO_VERSION" =~ (a|b|rc) ]]; then
+          just test-lock Django==$DJANGO_VERSION
         else
-          just test-lock Django~=${{ matrix.django-version }}.0
+          just test-lock Django~=$DJANGO_VERSION.0
         fi
     - name: Run Unit Tests
       run: |
@@ -333,12 +341,15 @@ jobs:
         - name: Setup Just
           uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff
         - name: Install Dependencies
+          env:
+            PYTHON_PATH: ${{ steps.sp.outputs.python-path }}
+            DJANGO_VERSION: ${{ matrix.django-version }}
           run: |
-            just setup ${{ steps.sp.outputs.python-path }}
-            if [[ "${{ matrix.django-version }}" =~ (a|b|rc) ]]; then
-              just test-lock Django==${{ matrix.django-version }}
+            just setup "$PYTHON_PATH"
+            if [[ "$DJANGO_VERSION" =~ (a|b|rc) ]]; then
+              just test-lock Django==$DJANGO_VERSION
             else
-              just test-lock Django~=${{ matrix.django-version }}.0
+              just test-lock Django~=$DJANGO_VERSION.0
             fi
         - name: Run Unit Tests
           run: |
@@ -410,12 +421,15 @@ jobs:
     - name: Setup Just
       uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff
     - name: Install Dependencies
+      env:
+        PYTHON_PATH: ${{ steps.sp.outputs.python-path }}
+        DJANGO_VERSION: ${{ matrix.django-version }}
       run: |
-        just setup ${{ steps.sp.outputs.python-path }}
-        if [[ "${{ matrix.django-version }}" =~ (a|b|rc) ]]; then
-          just test-lock Django==${{ matrix.django-version }}
+        just setup "$PYTHON_PATH"
+        if [[ "$DJANGO_VERSION" =~ (a|b|rc) ]]; then
+          just test-lock Django==$DJANGO_VERSION
         else
-          just test-lock Django~=${{ matrix.django-version }}.0
+          just test-lock Django~=$DJANGO_VERSION.0
         fi
     - name: Test Tab Completion
       run: |
@@ -491,12 +505,15 @@ jobs:
     - name: Setup Just
       uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff
     - name: Install Dependencies
+      env:
+        PYTHON_PATH: ${{ steps.sp.outputs.python-path }}
+        DJANGO_VERSION: ${{ matrix.django-version }}
       run: |
-        just setup ${{ steps.sp.outputs.python-path }}
-        if [[ "${{ matrix.django-version }}" =~ (a|b|rc) ]]; then
-          just test-lock Django==${{ matrix.django-version }}
+        just setup "$PYTHON_PATH"
+        if [[ "$DJANGO_VERSION" =~ (a|b|rc) ]]; then
+          just test-lock Django==$DJANGO_VERSION
         else
-          just test-lock Django~=${{ matrix.django-version }}.0
+          just test-lock Django~=$DJANGO_VERSION.0
         fi
     - name: Install Fish shell
       run: |
@@ -585,12 +602,15 @@ jobs:
     - name: Set SHELL variable
       run: echo "SHELL=$(which zsh)" >> $GITHUB_ENV
     - name: Install Dependencies
+      env:
+        PYTHON_PATH: ${{ steps.sp.outputs.python-path }}
+        DJANGO_VERSION: ${{ matrix.django-version }}
       run: |
-        just setup ${{ steps.sp.outputs.python-path }}
-        if [[ "${{ matrix.django-version }}" =~ (a|b|rc) ]]; then
-          just test-lock Django==${{ matrix.django-version }}
+        just setup "$PYTHON_PATH"
+        if [[ "$DJANGO_VERSION" =~ (a|b|rc) ]]; then
+          just test-lock Django==$DJANGO_VERSION
         else
-          just test-lock Django~=${{ matrix.django-version }}.0
+          just test-lock Django~=$DJANGO_VERSION.0
         fi
     - name: Run Unit Tests
       shell: zsh {0}
@@ -666,12 +686,15 @@ jobs:
       run: |
         brew install just
     - name: Install Dependencies
+      env:
+        PYTHON_PATH: ${{ steps.sp.outputs.python-path }}
+        DJANGO_VERSION: ${{ matrix.django-version }}
       run: |
-        just setup ${{ steps.sp.outputs.python-path }}
-        if [[ "${{ matrix.django-version }}" =~ (a|b|rc) ]]; then
-          just test-lock Django==${{ matrix.django-version }}
+        just setup "$PYTHON_PATH"
+        if [[ "$DJANGO_VERSION" =~ (a|b|rc) ]]; then
+          just test-lock Django==$DJANGO_VERSION
         else
-          just test-lock Django~=${{ matrix.django-version }}.0
+          just test-lock Django~=$DJANGO_VERSION.0
         fi
     - name: Run Unit Tests
       run: |
@@ -753,12 +776,15 @@ jobs:
     - name: Set SHELL variable
       run: echo "SHELL=$(which fish)" >> $GITHUB_ENV
     - name: Install Dependencies
+      env:
+        PYTHON_PATH: ${{ steps.sp.outputs.python-path }}
+        DJANGO_VERSION: ${{ matrix.django-version }}
       run: |
-        just setup ${{ steps.sp.outputs.python-path }}
-        if [[ "${{ matrix.django-version }}" =~ (a|b|rc) ]]; then
-          just test-lock Django==${{ matrix.django-version }}
+        just setup "$PYTHON_PATH"
+        if [[ "$DJANGO_VERSION" =~ (a|b|rc) ]]; then
+          just test-lock Django==$DJANGO_VERSION
         else
-          just test-lock Django~=${{ matrix.django-version }}.0
+          just test-lock Django~=$DJANGO_VERSION.0
         fi
     - name: Run Tab Completion Tests
       shell: fish {0}
@@ -835,14 +861,16 @@ jobs:
     - name: Setup Just
       uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff
     - name: Install Dependencies
+      env:
+        PYTHON_PATH: ${{ steps.sp.outputs.python-path }}
+        DJANGO_VERSION: ${{ matrix.django-version }}
       run: |
-        just setup ${{ steps.sp.outputs.python-path }}
-        $version = "${{ matrix.django-version }}"
+        just setup "$PYTHON_PATH"
 
-        if ($version -match "(a|b|rc)") {
-          just test-lock "Django==$version"
+        if ($DJANGO_VERSION -match "(a|b|rc)") {
+          just test-lock "Django==$DJANGO_VERSION"
         } else {
-          just test-lock "Django~=$version.0"
+          just test-lock "Django~=$DJANGO_VERSION.0"
         }
       shell: powershell
     - name: Run Powershell Tab Completion Tests
@@ -929,14 +957,16 @@ jobs:
     - name: Setup Just
       uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff
     - name: Install Dependencies
+      env:
+        PYTHON_PATH: ${{ steps.sp.outputs.python-path }}
+        DJANGO_VERSION: ${{ matrix.django-version }}
       run: |
-        just setup ${{ steps.sp.outputs.python-path }}
-        $version = "${{ matrix.django-version }}"
+        just setup "$PYTHON_PATH"
 
-        if ($version -match "(a|b|rc)") {
-          just test-lock "Django==$version"
+        if ($DJANGO_VERSION -match "(a|b|rc)") {
+          just test-lock "Django==$DJANGO_VERSION"
         } else {
-          just test-lock "Django~=$version.0"
+          just test-lock "Django~=$DJANGO_VERSION.0"
         }
       shell: pwsh
     - name: Run Powershell Tab Completion Tests
@@ -997,8 +1027,10 @@ jobs:
       - name: Setup Just
         uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff
       - name: Install Release Dependencies
+        env:
+          PYTHON_PATH: ${{ steps.sp.outputs.python-path }}
         run: |
-          just setup ${{ steps.sp.outputs.python-path }}
+          just setup "$PYTHON_PATH"
 
       - name: Get coverage files
         uses: actions/download-artifact@37930b1c2abaa49bbe596cd826c3c89aef350131
