--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -68,8 +68,10 @@ jobs:
       - name: Install Just
         uses: extractions/setup-just@e33e0265a09d6d736e2ee1e0eb685ef1de4669ff
       - name: Install Dependencies
+        env:
+          PYTHON_PATH: ${{ steps.sp.outputs.python-path }}
         run: |
-          just setup ${{ steps.sp.outputs.python-path }}
+          just setup "$PYTHON_PATH"
           if [[ "${{ matrix.django-version }}" =~ (a|b|rc) ]]; then
             just test-lock Django==${{ matrix.django-version }}
           else
