--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "hatchling.build"
 
 [project]
 name = "django-typer"
-version = "3.6.0"
+version = "3.6.1"
 requires-python = ">=3.10,<4.0"
 description = "Use Typer to define the CLI for your Django management commands."
 authors = [
@@ -18,13 +18,12 @@ homepage = "https://django-typer.readthedocs.io"
 keywords = ["django", "CLI", "management", "Typer", "commands"]
 dependencies = [
     "Django>=4.2,<6.1",
+    # feature releases of click have broken compat before so we set
+    # an upper bound on tested feature releases.
     "click>=8.1.8,<8.4",
-    # typer's release history is full of breaking changes for minor versions
-    # given the reliance on some of its private internals we peg the typer
-    # version very strictly to bug fix releases for specific minor lines.
+    # given the reliance on private Typer internals we peg the
+    # version very strictly to bug fix releases for specific feature lines.
     "typer>=0.23.1,<0.24.0",
-    # we need this on 3.9 for ParamSpec
-    "typing-extensions>=3.7.4.3; python_version < '3.10'",
 ]
 classifiers = [
     "Environment :: Console",
