--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1009,6 +1009,8 @@ jobs:
           persist-credentials: false
       - uses: actions/setup-python@a309ff8b426b58ec0e2a45f0f869d46889d02405
         id: sp
+        with:
+          python-version: 3.14
       - name: Install uv
         uses: astral-sh/setup-uv@eac588ad8def6316056a12d4907a9d4d84ff7a3b
         with:
